# doc-agent

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  ruff.toml
pipelines/: .gitlab-ci.yml  github-actions.yml
src/: __init__.py  analyzer.py  doc_manager.py  git_helper.py  groq_service.py  main.py  reviewer.py
src/analyzers/: __init__.py  base.py  detector.py  django_analyzer.py  fastapi_analyzer.py
